test/JDBC/expected/linked-servers-disabled.out
-- psql
CREATE EXTENSION IF NOT EXISTS tds_fdw;
GO

-- tsql
-- Try to add a linked server (sp_addlinkedserver)
EXEC sp_addlinkedserver  @server = N'mssql_server', @srvproduct=N'', @provider=N'SQLNCLI', @datasrc=N'localhost', @catalog=N'master'
GO
~~ERROR (Code: 33557097)~~

~~ERROR (Message: 'sp_addlinkedserver' is not currently supported in Babelfish)~~


-- Try to call sp_addlinkedserver from master.dbo schema
EXEC master.dbo.sp_addlinkedserver  @server = N'mssql_server1', @srvproduct=N'', @provider=N'tds_fdw', @datasrc=N'localhost', @catalog=N'master'
GO
~~ERROR (Code: 33557097)~~

~~ERROR (Message: 'sp_addlinkedserver' is not currently supported in Babelfish)~~


-- Try to call sp_addlinkedserver from sys schema
EXEC sys.sp_addlinkedserver  @server = N'mssql_server1', @srvproduct=N'', @provider=N'tds_fdw', @datasrc=N'localhost', @catalog=N'master'
GO
~~ERROR (Code: 33557097)~~

~~ERROR (Message: 'sp_addlinkedserver' is not currently supported in Babelfish)~~


-- Try to add a linked server login (sp_addlinkedsrvlogin)
EXEC sp_addlinkedsrvlogin @rmtsrvname = 'mssql_server', @useself = 'FALSE', @rmtuser = 'jdbc_user', @rmtpassword = '12345678'
GO
~~ERROR (Code: 33557097)~~

~~ERROR (Message: 'sp_addlinkedsrvlogin' is not currently supported in Babelfish)~~


-- Try to call sp_addlinkedsrvlogin from master.dbo schema
EXEC master.dbo.sp_addlinkedsrvlogin @rmtsrvname = 'mssql_server', @useself = 'FALSE', @rmtuser = 'jdbc_user', @rmtpassword = '12345678'
GO
~~ERROR (Code: 33557097)~~

~~ERROR (Message: 'sp_addlinkedsrvlogin' is not currently supported in Babelfish)~~


-- Try to call sp_addlinkedsrvlogin from sys schema
EXEC sys.sp_addlinkedsrvlogin @rmtsrvname = 'mssql_server', @useself = 'FALSE', @rmtuser = 'jdbc_user', @rmtpassword = '12345678'
GO
~~ERROR (Code: 33557097)~~

~~ERROR (Message: 'sp_addlinkedsrvlogin' is not currently supported in Babelfish)~~


-- Try to drop a linked server login (sp_dropserver)
EXEC sp_droplinkedsrvlogin @rmtsrvname = "mssql_server3", @locallogin = NULL
GO
~~ERROR (Code: 33557097)~~

~~ERROR (Message: 'sp_droplinkedsrvlogin' is not currently supported in Babelfish)~~


-- Try to call sp_droplinkedsrvlogin from master.dbo schema
EXEC master.dbo.sp_droplinkedsrvlogin @rmtsrvname = "mssql_server3", @locallogin = NULL
GO
~~ERROR (Code: 33557097)~~

~~ERROR (Message: 'sp_droplinkedsrvlogin' is not currently supported in Babelfish)~~


-- Try to call sp_droplinkedsrvlogin from sys schema
EXEC sys.sp_droplinkedsrvlogin @rmtsrvname = "mssql_server3", @locallogin = NULL
GO
~~ERROR (Code: 33557097)~~

~~ERROR (Message: 'sp_droplinkedsrvlogin' is not currently supported in Babelfish)~~


-- Try to drop a linked server (sp_dropserver)
EXEC sp_dropserver @server = 'mssql_server2', @droplogins = 'droplogins'
GO
~~ERROR (Code: 33557097)~~

~~ERROR (Message: 'sp_dropserver' is not currently supported in Babelfish)~~


-- Try to call sp_dropserver from master.dbo schema
EXEC master.dbo.sp_dropserver @server = 'mssql_server2', @droplogins = 'droplogins'
GO
~~ERROR (Code: 33557097)~~

~~ERROR (Message: 'sp_dropserver' is not currently supported in Babelfish)~~


-- Try to call sp_dropserver from sys schema
EXEC sys.sp_dropserver @server = 'mssql_server2', @droplogins = 'droplogins'
GO
~~ERROR (Code: 33557097)~~

~~ERROR (Message: 'sp_dropserver' is not currently supported in Babelfish)~~


-- Try to call openquery
SELECT * FROM OPENQUERY(bbf_server, 'SELECT * FROM TEXT_dt');
GO
~~ERROR (Code: 33557097)~~

~~ERROR (Message: 'rowset function' is not currently supported in Babelfish)~~


-- Try to call openquery from master.dbo schema
SELECT * FROM master.dbo.OPENQUERY(bbf_server, 'SELECT * FROM TEXT_dt');
GO
~~ERROR (Code: 33557097)~~

~~ERROR (Message: syntax error near 'OPENQUERY' at line 2 and character position 25)~~


-- Try to call openquery from sys schema
SELECT * FROM sys.OPENQUERY(bbf_server, 'SELECT * FROM TEXT_dt');
GO
~~ERROR (Code: 33557097)~~

~~ERROR (Message: syntax error near 'OPENQUERY' at line 2 and character position 18)~~


-- psql
DROP EXTENSION tds_fdw;
GO
